fixed misaligned in mobile mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,7 +101,7 @@ hr {
   }
   #navlist {
     padding: 10px 0 10px 0;
-    margin: 0;
+    margin: 0 5px 0 0;
     display: block;
     float: none;
     text-align: center;
